Ajout titre principale, image aperçu projet et objectif

--- a/projet_1.html
+++ b/projet_1.html
@@ -14,6 +14,27 @@
             <a href="index.html"><i class="fa-solid fa-circle-arrow-left"></i></a>
         </div>
 
+    <!-- Titre principal -->
+    <div class="overview-title">
+        <h1>Conception de Tableaux de Bord Interactifs <br> avex un Design UX/UI</h1>
+    </div>
+
+    <!-- Image d'aperçu du projet -->
+    <div class="overview-image-container">
+        <img src="images/Aperçu_projet_1.PNG" alt="Aperçu du projet" class="overview-image">
+    </div>
+
+    <!-- Texte descriptif de l'objectif du projet -->
+    <div class="project-objective">
+        <p>
+            Objectif du projet : <br><br>
+             Ce projet met en avant mes compétences en tant que data analyst et data engineer en réalisant un tableau de bord
+             interactif et impactant à partir de données publiques. L’objectif était de répondre aux besoins d’analyse d’un 
+             client fictif sur les ventes, le profit, les clients, les livraisons et les promotions, tout en respectant un 
+             design UX/UI moderne et intuitif.
+           </p>
+    </div>
+
     <!-- Répétition de 10 sections pour présenter le projet -->
     <!-- Section 1 -->
     <div class="section">
