Rédaction de la première section

--- a/projet_1.html
+++ b/projet_1.html
@@ -38,11 +38,69 @@
     <!-- Répétition de 10 sections pour présenter le projet -->
     <!-- Section 1 -->
     <div class="section">
-        <h1>Titre 1</h1> <!-- Titre principal -->
-        <h2>Sous-titre 1</h2> <!-- Sous-titre -->
-        <p>Texte descriptif concernant le projet informatique. Ce texte peut inclure des détails techniques, des objectifs ou des résultats.</p> <!-- Texte -->
-        <img src="image1.jpg" alt="Illustration 1"> <!-- Image illustrative -->
-        <p>Texte supplémentaire pour détailler ou conclure cette section.</p> <!-- Texte supplémentaire -->
+        <h1>Rencontre avec les Clients</h1> <!-- Titre principal -->
+        <h2>Rédaction du Cahier des Charges </h2> <!-- Sous-titre -->
+        <p>La première étape a consisté à identifier les besoins spécifiques des utilisateurs finaux,
+             qu’ils soient stratégiques ou opérationnels.</p> <!-- Texte -->
+        <img src="images/rencontre_clients.png" alt="Illustration 1"> <!-- Image illustrative -->
+        <p>Cahier des charges : </p> <!-- Texte -->
+            <!-- Tableau du cahier des charges -->
+    <table class="requirements-table">
+        <thead>
+            <tr>
+                <th>Section</th>
+                <th>Description</th>
+                <th>Détails Techniques</th>
+                <th>Visuels et Fonctionnalités</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1. Rapport global</td>
+                <td>Vue d’ensemble des indicateurs clés pour suivre l’activité globale.</td>
+                <td>Total des ventes, Nombre de commandes, Coût de livraison, Profits</td>
+                <td>Carte : ventes par localisation<br>Graphique : ventes par date, marché, catégorie<br>Filtres : date, marché, catégories</td>
+            </tr>
+            <tr>
+                <td>2. Rapport sur les ventes</td>
+                <td>Analyse des performances de ventes actuelles et comparatives.</td>
+                <td>Ventes actuelles et de l’année dernière, Différence des ventes, Meilleures ventes</td>
+                <td>Graphiques : ventes par année, catégorie, sous-catégorie, marché</td>
+            </tr>
+            <tr>
+                <td>3. Rapport sur les profits</td>
+                <td>Focus sur la rentabilité de l’activité.</td>
+                <td>Profits totaux, par catégorie, marché, pays/régions</td>
+                <td>Diagrammes : profits par catégorie, marché<br>Détails tabulaires : profits par sous-catégorie</td>
+            </tr>
+            <tr>
+                <td>4. Rapport sur les clients</td>
+                <td>Analyse des clients et de leur impact financier.</td>
+                <td>Revenus générés, Nombre de clients, Classement des meilleurs/mauvais clients</td>
+                <td>Graphiques : profits par type de client, catégorie, sous-catégorie</td>
+            </tr>
+            <tr>
+                <td>5. Rapport sur la livraison</td>
+                <td>Suivi des indicateurs liés à la logistique et performance des livraisons.</td>
+                <td>Temps moyen de livraison, Coût moyen, Commandes urgentes</td>
+                <td>Classements : pays (coût/délai livraison)<br>Graphiques : coûts/délais par localisation</td>
+            </tr>
+            <tr>
+                <td>6. Rapport sur les promotions</td>
+                <td>Analyse des promotions et de leur impact sur les ventes et profits.</td>
+                <td>Ventes avec/sans promotion, Moyenne des promotions</td>
+                <td>Graphiques : promotions vs ventes, commandes par promotion, promotions vs profits</td>
+            </tr>
+        </tbody>
+    </table>
+        <p>Remarque supplémentaire: <br> <br>
+            Intégration des filtres dynamiques: chaque rapport devra inclure des filtres interactifs pour affiner les analyses. Les filtres principaux incluent :
+            Dates (jour, mois, année),Catégories,Marchés <br>
+            Cohérence visuelle : Couleurs standardisées pour les catégories et les marchés.
+            Police et taille des textes adaptées à une lecture claire. <br>
+            Performance : Le tableau de bord doit être optimisé pour un chargement rapide malgré des volumes de données importants. <br>
+            Exportation : Possibilité d’exporter les visuels et données sous format Excel ou PDF. <br>
+            Accessibilité : Le tableau de bord doit être consultable via desktop et mobile.</p> <!-- Texte supplémentaire -->
     </div>
 
     <!-- Section 2 -->
