Rédaction de la section 2

--- a/projet_1.html
+++ b/projet_1.html
@@ -105,11 +105,13 @@
 
     <!-- Section 2 -->
     <div class="section">
-        <h1>Titre 2</h1>
-        <h2>Sous-titre 2</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image2.jpg" alt="Illustration 2">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Téléchargement et Exploration des Données</h1>
+        <p>On va exploiter les données du "Superstore" issues du site Kaggle (https://www.kaggle.com/datasets/anandaramg/global-superstore)
+            . On va utiliser un CSV contenant des dizaines de milliers de lignes. 
+            Ces données détaillent les ventes d’un magasin fictif dans le secteur du retail.</p>
+        <img src="images/données_Kaggle.PNG" alt="Illustration 2">
+        <p>Une exploration des données a permis de repérer les anomalies et de mieux comprendre leur structure avant
+             de commencer la phase de nettoyage</p>
     </div>
 
     <!-- Section 3 -->
