--- a/projet_1.html
+++ b/projet_1.html
@@ -116,14 +116,17 @@
 
     <!-- Section 3 -->
     <div class="section">
-        <h1>Titre 3</h1>
-        <h2>Sous-titre 3</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image3.jpg" alt="Illustration 3">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Création du Data Warehouse sur SSMS</h1>
+        <p>Création des Tables : J'ai créé une structure de datawarehouse sur SQL Server Management Studio (SSMS),
+             en m’appuyant sur une architecture de type modèle en étoile. Ce modèle consiste en une table de faits 
+             et plusieurs tables de dimensions, créant ainsi une relation de type "1 à plusieurs" entre chaque table 
+             de dimension et la table de faits. 
+            </p>
+        <img src="images/Capture_ecran_SSMS_code_creation_table.PNG" alt="Illustration 3">
+        <p>J'ai créer les différentes tables du modèle et charger les données du fichier CSV dans chaque table.
+            Cette étape a permis de structurer les données de manière logique avant d’entamer les transformations nécessaires.</p>
     </div>
 
-    <!-- Ajout de 7 autres sections similaires -->
     <!-- Section 4 -->
     <div class="section">
         <h1>Titre 4</h1>
