modif txt section 3

--- a/projet_1.html
+++ b/projet_1.html
@@ -120,7 +120,8 @@
         <p>Création des Tables : J'ai créé une structure de datawarehouse sur SQL Server Management Studio (SSMS),
              en m’appuyant sur une architecture de type modèle en étoile. Ce modèle consiste en une table de faits 
              et plusieurs tables de dimensions, créant ainsi une relation de type "1 à plusieurs" entre chaque table 
-             de dimension et la table de faits. 
+             de dimension et la table de faits. <br> <br>
+             Aperçu du code de création de table et de l'insertion des données :
             </p>
         <img src="images/Capture_ecran_SSMS_code_creation_table.PNG" alt="Illustration 3">
         <p>J'ai créer les différentes tables du modèle et charger les données du fichier CSV dans chaque table.
