--- a/projet_1.html
+++ b/projet_1.html
@@ -130,11 +130,21 @@
 
     <!-- Section 4 -->
     <div class="section">
-        <h1>Titre 4</h1>
-        <h2>Sous-titre 4</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image4.jpg" alt="Illustration 4">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Data Cleaning et Préparation des Données (SQL)</h1>
+        <p>Détection et élimination des doublons : Un contrôle rigoureux a été effectué pour éliminer les doublons dans 
+           les données brutes et garantir l'intégrité des informations. <br> <br>
+           Ci-dessous un exemple de détection de doublons et de modif, la détection des doublons sur la colonne Product_ID ainsi que la sauvegarde de la table avant 
+           la création d'une nouvelle colonne, qui sera la concaténation de Product_ID et Product_Name, afin 
+           d'éliminer les doublons et de disposer d'une clé primaire.
+        </p>
+        <img src="images/Détection des doublons.PNG" alt="Illustration 4">
+        <img src="images/SVG_Ajout_modif_colonne_SSMS.PNG" alt="Illustration 4.5">
+        <p>Création des Clés Primaires et Étrangères : Des clés primaires et étrangères ont été définies 
+            pour chaque table de faits et de dimensions, garantissant des relations correctes entre 
+            les différentes tables du modèle. Ci-dessous un exemple de la modification de la table product 
+            et établissement de la clé primaire</p>
+        <img src="images/Modif_table_Product_ajout_clé_primaire.PNG" alt="Illustration 4.8">
+
     </div>
 
     <!-- Section 5 -->
