--- a/projet_1.html
+++ b/projet_1.html
@@ -149,11 +149,11 @@
 
     <!-- Section 5 -->
     <div class="section">
-        <h1>Titre 5</h1>
-        <h2>Sous-titre 5</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image5.jpg" alt="Illustration 5">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Import des Données dans Power BI</h1>
+        <p>Une fois la structure du datawarehouse en place et les données nettoyées, celles-ci ont été importées dans Power BI.
+             Grâce aux clés primaires et étrangères définies précédemment dans SSMS, Power BI a automatiquement 
+             créé un modèle relationnel entre les différentes tables, facilitant ainsi l’analyse des données.</p>
+        <img src="images/Modèle_sémantique_PBI.PNG" alt="Illustration 5">
     </div>
 
     <!-- Section 6 -->
