Rédaction de la section 6

--- a/projet_1.html
+++ b/projet_1.html
@@ -158,11 +158,11 @@
 
     <!-- Section 6 -->
     <div class="section">
-        <h1>Titre 6</h1>
-        <h2>Sous-titre 6</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image6.jpg" alt="Illustration 6">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Transformation des Données avec Power Query </h1>
+        <h2>Nettoyage et Préparation</h2>
+        <p>Plusieurs transformations ont été appliquées via Power Query M pour améliorer la qualité des données,
+           comme le renommage de certaines colonnes et la gestion des valeurs nulles.</p>
+        <img src="images/Transformation des données dans PBI.PNG" alt="Illustration 6">
     </div>
 
     <!-- Section 7 -->
