--- a/projet_1.html
+++ b/projet_1.html
@@ -167,11 +167,22 @@
 
     <!-- Section 7 -->
     <div class="section">
-        <h1>Titre 7</h1>
-        <h2>Sous-titre 7</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image7.jpg" alt="Illustration 7">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Création des visualisations et des mesures DAX dans Power BI</h1>
+        <h2>Création des visuels dans Power BI</h2>
+        <p> Exemples de visualisations créées avant le design UX/UI :
+            Graphiques à barres pour les ventes par produit.
+            Cartes KPI pour les indicateurs clés comme le total des ventes et des profits.
+            Diagrammes circulaires pour la répartition des clients par segment. 
+            Tout cela en respectant le cahier des charges définis précedement avec les clients.
+        </p>
+        <img src="images/Rapport_sans_design_UXUI.PNG" alt="Illustration 7">
+        <h2>Création des mesures DAX</h2>
+        <p>J’ai conçu des mesures DAX pour répondre aux besoins identifiés dans le cahier des charges.
+             On a séparé ces mesures DAX des tables dans un dossier Mesures. <br>
+             Voici un aperçu du dossier mesure "Folder Measures" : </p>
+        <img src="images/Mesures_DAX_1.PNG" alt="Illustration 7">
+        <p> <br> Voici un aperçu du code DAX de quelques mesures : <br></p>
+        <img src="images/DAX_code_2.PNG" alt="Illustration 7">
     </div>
 
     <!-- Section 8 -->
