--- a/projet_1.html
+++ b/projet_1.html
@@ -187,11 +187,21 @@
 
     <!-- Section 8 -->
     <div class="section">
-        <h1>Titre 8</h1>
-        <h2>Sous-titre 8</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image8.jpg" alt="Illustration 8">
-        <p>Texte supplémentaire pour cette section.</p>
+        <h1>Conception du Design UX/UI </h1>
+        <p>Le design des rapports et du tableau de bord a été pensé de manière à être simple,
+             clair, et intuitif. L’objectif était de garantir une bonne expérience utilisateur,
+              en favorisant une navigation fluide entre les différentes sections des tableaux de bord,
+               tout en affichant les informations les plus pertinentes de manière visuellement attractive.
+                La palette de couleurs choisie était cohérente avec l’image de marque du client fictif et
+                 a été testée pour assurer une lisibilité optimale. <br> <br>
+                 Ci-dessous figurent les différents rapports qui composent le tableau de bord du client,
+                 conformes aux points énoncés dans le cahier des charges.</p>
+        <img src="images/Rapport_PBI_1.PNG" alt="Illustration 8">
+        <img src="images/Rapport_PBI_2.PNG" alt="Illustration 8">
+        <img src="images/Rapport_PBI_3.PNG" alt="Illustration 8">
+        <img src="images/Rapport_PBI_4.PNG" alt="Illustration 8">
+        <img src="images/Rapport_PBI_5.PNG" alt="Illustration 8">
+        <img src="images/Rapport_PBI_6.PNG" alt="Illustration 8">
     </div>
 
     <!-- Section 9 -->
