Modif description du projet

--- a/projet_1.html
+++ b/projet_1.html
@@ -28,10 +28,12 @@
     <div class="project-objective">
         <p>
             Objectif du projet : <br><br>
-             Ce projet met en avant mes compétences en tant que data analyst et data engineer en réalisant un tableau de bord
-             interactif et impactant à partir de données publiques. L’objectif était de répondre aux besoins d’analyse d’un 
-             client fictif sur les ventes, le profit, les clients, les livraisons et les promotions, tout en respectant un 
-             design UX/UI moderne et intuitif.
+            Ce projet a été conçu pour illustrer ma capacité à prendre en charge un projet d’analyse de données de A à Z,
+             en passant par la préparation des données, la création d’un datawarehouse, la modélisation des données,
+              et la création de tableaux de bord interactifs avec Power BI. Le projet visait à répondre aux besoins 
+              spécifiques d'un client fictif dans le secteur du retail, en se concentrant sur l’analyse des ventes,
+               des profits, des clients, des livraisons et des promotions, tout en assurant un design UX/UI optimal
+               et un haut niveau d'interactivité
            </p>
     </div>
 
