modif mineure description projet

--- a/projet_1.html
+++ b/projet_1.html
@@ -29,11 +29,11 @@
         <p>
             Objectif du projet : <br><br>
             Ce projet a été conçu pour illustrer ma capacité à prendre en charge un projet d’analyse de données de A à Z,
-             en passant par la préparation des données, la création d’un datawarehouse, la modélisation des données,
+             en passant par la création d’un datawarehouse, la préparation des données (SQL), la modélisation des données,
               et la création de tableaux de bord interactifs avec Power BI. Le projet visait à répondre aux besoins 
               spécifiques d'un client fictif dans le secteur du retail, en se concentrant sur l’analyse des ventes,
                des profits, des clients, des livraisons et des promotions, tout en assurant un design UX/UI optimal
-               et un haut niveau d'interactivité
+               et un haut niveau d'interactivité.
            </p>
     </div>
 
