Rédaction de la conclusion

--- a/projet_1.html
+++ b/projet_1.html
@@ -206,22 +206,23 @@
         <img src="images/Rapport_PBI_6.PNG" alt="Illustration 8">
     </div>
 
-    <!-- Section 9 -->
-    <div class="section">
-        <h1>Titre 9</h1>
-        <h2>Sous-titre 9</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image9.jpg" alt="Illustration 9">
-        <p>Texte supplémentaire pour cette section.</p>
+    <!-- Section de conclusion -->
+    <div class="conclusion-section">
+        <h1>Conclusion</h1>
+        <p>
+            Ce projet montre mon expertise dans la gestion des données, la création d'un data warehouse,
+             la transformation de données et la création de rapports interactifs. J'ai mis en place un tableau de bord complet
+              permettant au client fictif d'analyser efficacement ses ventes, ses profits, ses délais de livraison, 
+              et les performances de ses promotions. Ce projet démontre ma capacité à travailler sur toutes les étapes 
+              du cycle de vie des données, en utilisant des outils comme SQL, Power BI et Power Query, 
+              tout en garantissant un design UX/UI adapté aux besoins des utilisateurs finaux.
+            <br>
+            Ce projet illustre également ma capacité à répondre aux demandes spécifiques d’un client,
+             à optimiser des données, et à fournir des résultats visuels clairs et percutants grâce 
+             à une approche orientée client et résultats.
+        </p>
+        <p>Merci pour votre attention.</p>
     </div>
 
-    <!-- Section 10 -->
-    <div class="section">
-        <h1>Titre 10</h1>
-        <h2>Sous-titre 10</h2>
-        <p>Texte descriptif concernant le projet informatique.</p>
-        <img src="image10.jpg" alt="Illustration 10">
-        <p>Texte supplémentaire pour cette section.</p>
-    </div>
 </body>
 </html>
