Modif pour affichage petit écran

--- a/projet_1.html
+++ b/projet_1.html
@@ -47,54 +47,54 @@
         <img src="images/rencontre_clients.png" alt="Illustration 1"> <!-- Image illustrative -->
         <p>Cahier des charges : </p> <!-- Texte -->
             <!-- Tableau du cahier des charges -->
-    <table class="requirements-table">
-        <thead>
-            <tr>
-                <th>Section</th>
-                <th>Description</th>
-                <th>Détails Techniques</th>
-                <th>Visuels et Fonctionnalités</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1. Rapport global</td>
-                <td>Vue d’ensemble des indicateurs clés pour suivre l’activité globale.</td>
-                <td>Total des ventes, Nombre de commandes, Coût de livraison, Profits</td>
-                <td>Carte : ventes par localisation<br>Graphique : ventes par date, marché, catégorie<br>Filtres : date, marché, catégories</td>
-            </tr>
-            <tr>
-                <td>2. Rapport sur les ventes</td>
-                <td>Analyse des performances de ventes actuelles et comparatives.</td>
-                <td>Ventes actuelles et de l’année dernière, Différence des ventes, Meilleures ventes</td>
-                <td>Graphiques : ventes par année, catégorie, sous-catégorie, marché</td>
-            </tr>
-            <tr>
-                <td>3. Rapport sur les profits</td>
-                <td>Focus sur la rentabilité de l’activité.</td>
-                <td>Profits totaux, par catégorie, marché, pays/régions</td>
-                <td>Diagrammes : profits par catégorie, marché<br>Détails tabulaires : profits par sous-catégorie</td>
-            </tr>
-            <tr>
-                <td>4. Rapport sur les clients</td>
-                <td>Analyse des clients et de leur impact financier.</td>
-                <td>Revenus générés, Nombre de clients, Classement des meilleurs/mauvais clients</td>
-                <td>Graphiques : profits par type de client, catégorie, sous-catégorie</td>
-            </tr>
-            <tr>
-                <td>5. Rapport sur la livraison</td>
-                <td>Suivi des indicateurs liés à la logistique et performance des livraisons.</td>
-                <td>Temps moyen de livraison, Coût moyen, Commandes urgentes</td>
-                <td>Classements : pays (coût/délai livraison)<br>Graphiques : coûts/délais par localisation</td>
-            </tr>
-            <tr>
-                <td>6. Rapport sur les promotions</td>
-                <td>Analyse des promotions et de leur impact sur les ventes et profits.</td>
-                <td>Ventes avec/sans promotion, Moyenne des promotions</td>
-                <td>Graphiques : promotions vs ventes, commandes par promotion, promotions vs profits</td>
-            </tr>
-        </tbody>
-    </table>
+            <table class="requirements-table">
+                <thead>
+                    <tr>
+                        <th>Section</th>
+                        <th>Description</th>
+                        <th>Détails Techniques</th>
+                        <th>Visuels et Fonctionnalités</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td data-label="Section">1. Rapport global</td>
+                        <td data-label="Description">Vue d’ensemble des indicateurs clés pour suivre l’activité globale.</td>
+                        <td data-label="Détails Techniques">Total des ventes, Nombre de commandes, Coût de livraison, Profits</td>
+                        <td data-label="Visuels et Fonctionnalités">Carte : ventes par localisation<br>Graphique : ventes par date, marché, catégorie<br>Filtres : date, marché, catégories</td>
+                    </tr>
+                    <tr>
+                        <td data-label="Section">2. Rapport sur les ventes</td>
+                        <td data-label="Description">Analyse des performances de ventes actuelles et comparatives.</td>
+                        <td data-label="Détails Techniques">Ventes actuelles et de l’année dernière, Différence des ventes, Meilleures ventes</td>
+                        <td data-label="Visuels et Fonctionnalités">Graphiques : ventes par année, catégorie, sous-catégorie, marché</td>
+                    </tr>
+                    <tr>
+                        <td data-label="Section">3. Rapport sur les profits</td>
+                        <td data-label="Description">Focus sur la rentabilité de l’activité.</td>
+                        <td data-label="Détails Techniques">Profits totaux, par catégorie, marché, pays/régions</td>
+                        <td data-label="Visuels et Fonctionnalités">Diagrammes : profits par catégorie, marché<br>Détails tabulaires : profits par sous-catégorie</td>
+                    </tr>
+                    <tr>
+                        <td data-label="Section">4. Rapport sur les clients</td>
+                        <td data-label="Description">Analyse des clients et de leur impact financier.</td>
+                        <td data-label="Détails Techniques">Revenus générés, Nombre de clients, Classement des meilleurs/mauvais clients</td>
+                        <td data-label="Visuels et Fonctionnalités">Graphiques : profits par type de client, catégorie, sous-catégorie</td>
+                    </tr>
+                    <tr>
+                        <td data-label="Section">5. Rapport sur la livraison</td>
+                        <td data-label="Description">Suivi des indicateurs liés à la logistique et performance des livraisons.</td>
+                        <td data-label="Détails Techniques">Temps moyen de livraison, Coût moyen, Commandes urgentes</td>
+                        <td data-label="Visuels et Fonctionnalités">Classements : pays (coût/délai livraison)<br>Graphiques : coûts/délais par localisation</td>
+                    </tr>
+                    <tr>
+                        <td data-label="Section">6. Rapport sur les promotions</td>
+                        <td data-label="Description">Analyse des promotions et de leur impact sur les ventes et profits.</td>
+                        <td data-label="Détails Techniques">Ventes avec/sans promotion, Moyenne des promotions</td>
+                        <td data-label="Visuels et Fonctionnalités">Graphiques : promotions vs ventes, commandes par promotion, promotions vs profits</td>
+                    </tr>
+                </tbody>
+            </table>
         <p>Remarque supplémentaire: <br> <br>
             Intégration des filtres dynamiques: chaque rapport devra inclure des filtres interactifs pour affiner les analyses. Les filtres principaux incluent :
             Dates (jour, mois, année),Catégories,Marchés <br>
