--- a/projet_1.html
+++ b/projet_1.html
@@ -16,7 +16,7 @@
 
     <!-- Titre principal -->
     <div class="overview-title">
-        <h1>Conception de Tableaux de Bord Interactifs <br> avec un Design UX/UI</h1>
+        <h1>Retail Insights 360°</h1>
     </div>
 
     <!-- Image d'aperçu du projet -->
