Ajout projet_2_Dashboard_Excel

--- a/index.html
+++ b/index.html
@@ -128,20 +128,15 @@
                 </div>
             </div>
             <div class="work">
-                <img src="images/application.PNG" alt="">
+                <img src="images/tableau de bord multi.png" alt="">
                 <div class="layer">
-                    <h3>PowerFlow Analytics</h3>
-                    <p>A venir</p>
-                   <!-- <p>Développement d'une application Power Apps pour collecter des données, les centraliser dans une base de données,
-                         puis les exploiter dans Power BI. Le projet inclut la conception de l’application,
-                          l’intégration avec une base SQL, et la création de tableaux de bord dynamiques et interactifs.
-                           Objectif : offrir une solution complète pour la saisie, la gestion et l’analyse des données en temps réel,
-                            adaptée aux besoins opérationnels et stratégiques.</p>  -->
-                          <!--  <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a> -->
+                    <h3>De la Data à l’Action</h3>
+                    <p>Création d’un Dashboard Avancé sous Excel avec VBA et Analyse e-Commerce</p>
+                          <a href="projet_2.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/tableau de bord multi.png" alt="">
+                <img src="images/application.PNG" alt="">
                 <div class="layer">
                     <h3>Création de Tableaux de Bord Interactifs Multi-Outils</h3>
                     <p>A venir</p>
